bk_ida/gccida/g2/store_constructor_field
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor_field/src/expr.c:4803:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor_field/src/expr.c:4813:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor_field/src/expr.c:4815:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor_field/src/expr.c:4853:23: error: use of undeclared identifier 'machine_mode'
get_mode_alignment( ( machine_mode)v18); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor_field/src/expr.c:4864:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = ( _QWORD *)v9[1]; 
                 ^~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor_field/src/obj/expr.o] Error 1
